--- a/index.html
+++ b/index.html
@@ -291,7 +291,6 @@
   <h3 style="font-size: 1.1rem; text-align: center; margin-bottom: 20px;">
     Você já tentou fazer sorvete em casa? Quais opções você tentou?
   </h3>
-  <a class="option" onclick="registrarResposta('Tentativa de Sorvete', 'Faço receitas quase todo dia'); nextQuestion('q2')">Faço receitas quase todo dia</a>
   <a class="option" onclick="registrarResposta('Tentativa de Sorvete', 'Receita do YouTube 😩'); nextQuestion('q3')">Receita do YouTube 😩</a>
   <a class="option" onclick="registrarResposta('Tentativa de Sorvete', 'Receita da embalagem do leite condensado 🤔'); nextQuestion('q3')">Receita da embalagem do leite condensado 🤔</a>
   <a class="option" onclick="registrarResposta('Tentativa de Sorvete', 'Já comprei misturas prontas 😕'); nextQuestion('q3')">Já comprei misturas prontas 😕</a>
@@ -299,26 +298,29 @@
 </div>
 
 <div id="q3" class="quiz-container">
-  <h3>Imagine só você recebendo elogios por um sorvete caseiro feito por você. Como você se sentiria?</h3>
-  <a class="option" onclick="nextQuestion('q4')">Orgulhoso(a) e querendo repetir</a>
-  <a class="option" onclick="nextQuestion('q4')">Aliviado(a) de finalmente acertar uma receita</a>
-  <a class="option" onclick="nextQuestion('q4')">Seria incrível… mas parece impossível</a>
+  <h3>Imagine só você recebendo elogios por um sorvete caseiro feito por você. Como você se sentiria?
+  </h3>
+  <a class="option" onclick="registrarResposta('Emoção', 'Orgulhoso(a) e querendo repetir'); nextQuestion('q4')">Orgulhoso(a) e querendo repetir</a>
+  <a class="option" onclick="registrarResposta('Emoção', 'Aliviado(a) de finalmente acertar uma receita'); nextQuestion('q4')">Aliviado(a) de finalmente acertar uma receita</a>
+  <a class="option" onclick="registrarResposta('Emoção', 'Seria incrível… mas parece impossível'); nextQuestion('q4')">Seria incrível… mas parece impossível</a>
 </div>
 
 <div id="q4" class="quiz-container">
   <h3>E se eu te dissesse que você pode fazer um sorvete cremoso sem máquina, sem erro, e sem gosto de leite condensado?</h3>
-  <a class="option" onclick="nextQuestion('q5')">Eu quero muito isso!</a>
-  <a class="option" onclick="nextQuestion('q5')">Será mesmo?</a>
-  <a class="option" onclick="nextQuestion('q5')">Eu já desisti de tentar…</a>
-  <a class="option" onclick="nextQuestion('q5')">Se for simples de verdade, eu topo!</a>
+
+  <a class="option" onclick="registrarResposta('Pergunta-chave', 'Eu quero muito isso!'); nextQuestion('q5')">Eu quero muito isso!</a>
+  <a class="option" onclick="registrarResposta('Pergunta-chave', 'Será mesmo?'); nextQuestion('q5')">Será mesmo?</a>
+  <a class="option" onclick="registrarResposta('Pergunta-chave', 'Eu já desisti de tentar…'); nextQuestion('q5')">Eu já desisti de tentar…</a>
+  <a class="option" onclick="registrarResposta('Pergunta-chave', 'Se for simples de verdade, eu topo!'); nextQuestion('q5')">Se for simples de verdade, eu topo!</a>
 </div>
 
 <div id="q5" class="quiz-container">
   <h3>Esse método foi criado exatamente pra quem não é chef, não tem máquina e já se frustrou antes.</h3>
-  <a class="option" onclick="nextQuestion('q6')">Agora você me pegou</a>
-  <a class="option" onclick="nextQuestion('q6')">Quero entender como funciona isso</a>
-  <a class="option" onclick="nextQuestion('q6')">Duvido, mas vou até o fim</a>
-  <a class="option" onclick="nextQuestion('q6')">Me mostra logo essa receita!</a>
+
+  <a class="option" onclick="registrarResposta('Metodo', 'Agora você me pegou'); nextQuestion('q6')">Agora você me pegou</a>
+  <a class="option" onclick="registrarResposta('Metodo', 'Quero entender como funciona isso'); nextQuestion('q6')">Quero entender como funciona isso</a>
+  <a class="option" onclick="registrarResposta('Metodo', 'Duvido, mas vou até o fim'); nextQuestion('q6')">Duvido, mas vou até o fim</a>
+  <a class="option" onclick="registrarResposta('Metodo', 'Me mostra logo essa receita!'); nextQuestion('q6')">Me mostra logo essa receita!</a>
 </div>
 
 <div id="q6" class="quiz-container">
@@ -332,7 +334,7 @@
       ✅ <strong>Receitas clássicas + receitas autorais</strong>
     </p>
   </div>
-  <a class="option" onclick="nextQuestion('final')">Se for simples de verdade, eu topo!</a>
+  <a class="option" onclick="registrarResposta('Final', 'Se for simples de verdade, eu topo!'); nextQuestion('final')">Se for simples de verdade, eu topo!</a>
 </div>
 
 <div id="final" class="quiz-container final">
