--- a/index.html
+++ b/index.html
@@ -380,6 +380,14 @@
     </div>
   </div>
 
+    <!-- IMAGEM COM OS BÔNUS -->
+  <h3 style="margin: 30px 0 15px; text-align: center; color: #E74C3C;">
+  VOCÊ TAMBÉM IRÁ RECEBER ESSES 3 OUTROS BÔNUS NA COMPRA <strong>NOSSO EBOOK!</strong>
+  </h3> 
+  <div style="text-align: center; margin-bottom: 30px;">
+    <img src="images/bonus.png" alt="Ebook Sorvete Sem Segredo" style="max-width: 100%; margin-top: -20px"" />
+    <img src="images/cta.jpg" alt="Ebook Sorvete Sem Segredo" style="max-width: 100%; margin-top: -20px;"/>
+
   <!-- CARROSSEL ATUALIZADO (Código 2 integrado) -->
 
   <!-- CARROSSEL ATUALIZADO -->
