--- a/teste2.html
+++ b/teste2.html
@@ -314,7 +314,7 @@
   <div class="final-flex" style="display: flex; flex-wrap: wrap; gap: 30px; margin-bottom: 25px; align-items: center;">
     <!-- Imagem à esquerda -->
     <div style="flex: 0 0 40%; max-width: 250px;">
-      <img src="images/pessoa2.png" alt="Sorvete caseiro perfeito" style="width: 100%; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+        <img src="images/pessoa2.png" alt="Sorvete caseiro perfeito" style="width: 100%; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
     </div>
     <!-- Texto à direita -->
     <div style="flex: 1;">
@@ -356,6 +356,16 @@
       <p style="margin: 0; font-size: 0.9rem;">O truque para reduzir a doçura sem perder sabor</p>
     </div>
   </div>
+
+
+  <!-- IMAGEM COM OS BÔNUS -->
+  <h3 style="margin: 30px 0 15px; text-align: center; color: #E74C3C;">
+  VOCÊ TAMBÉM IRÁ RECEBER ESSES 3 OUTROS BÔNUS NA COMPRA <strong>NOSSO EBOOK!</strong>
+  </h3> 
+  <div style="text-align: center; margin-bottom: 30px;">
+    <img src="images/bonus.png" alt="Ebook Sorvete Sem Segredo" style="max-width: 100%; margin-top: -20px"" />
+    <img src="images/cta.jpg" alt="Ebook Sorvete Sem Segredo" style="max-width: 100%; margin-top: -20px;"/>
+
 
  <!-- Depoimentos dos clientes -->
   <div style="text-align: center; font-size: 0.93rem; color: #888; margin-bottom: 6px;">
