--- a/index.html
+++ b/index.html
@@ -379,10 +379,15 @@
       <p style="margin: 0; font-size: 0.9rem;">O truque para reduzir a doçura sem perder sabor</p>
     </div>
   </div>
-
+  
+  <div style= "text-align: center;">
+  <a class="checkout-button" href="https://pay.kirvano.com/9aa58506-88d8-4680-93c5-42ddfb8b024f" target="_blank" style="display: inline-block; background: #E74C3C; color: white; padding: 15px 30px; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.1rem; box-shadow: 0 4px 12px rgba(231, 76, 60, 0.3); margin-top:0px;">
+      QUERO MEU SORVETE AGORA!
+    </a>
+  </div>
     <!-- IMAGEM COM OS BÔNUS -->
   <h3 style="margin: 30px 0 15px; text-align: center; color: #E74C3C;">
-  VOCÊ TAMBÉM IRÁ RECEBER ESSES 3 OUTROS BÔNUS NA COMPRA <strong>NOSSO EBOOK!</strong>
+  E ALÉM DISSO, VOCÊ TAMBÉM RECEBERÁ <strong>3 BÔNUS EXCLUSIVOS NA SUA NA COMPRA:</strong>
   </h3> 
   <div style="text-align: center; margin-bottom: 30px;">
     <img src="images/bonus.png" alt="Ebook Sorvete Sem Segredo" style="max-width: 100%; margin-top: -20px"" />
@@ -526,11 +531,6 @@
       </div>
     </div>
 
-    <div style="background: #fffbe7; color: #b85c00; font-size: 1.5rem; font-weight: bold; border-radius: 14px; padding: 18px 0; margin: 30px auto 10px auto; max-width: 350px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); text-align: center; border: 2px solid #ffe2a0;">
-      🎉 <span style="font-size:1.2rem;">De <s>R$50,00</s> por apenas</span><br>
-      <span style="font-size:2.1rem; color:#ff6b00;">R$35,00</span>
-    </div>
-
     <div style="background: #fff8f0; border: 2px dashed #f4b183; padding: 20px; border-radius: 16px; margin-top: 30px; text-align: center; box-shadow: 0 0 8px rgba(0,0,0,0.03);">
       <p style="font-size: 1rem; color: #7a4e27; margin: 0;">
         💡 <strong>Garantia incondicional:</strong><br>
@@ -538,6 +538,11 @@
       </p>
     </div>
 
+        <div style="background: #fffbe7; color: #b85c00; font-size: 1.5rem; font-weight: bold; border-radius: 14px; padding: 18px 0; margin: 30px auto 10px auto; max-width: 350px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); text-align: center; border: 2px solid #ffe2a0;">
+      🎉 <span style="font-size:1.2rem;">De <s>R$50,00</s> por apenas</span><br>
+      <span style="font-size:2.1rem; color:#ff6b00;">R$35,00</span>
+    </div>
+    
     <a class="checkout-button" href="https://pay.kirvano.com/9aa58506-88d8-4680-93c5-42ddfb8b024f" target="_blank" style="display: inline-block; background: #E74C3C; color: white; padding: 15px 30px; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.1rem; box-shadow: 0 4px 12px rgba(231, 76, 60, 0.3); margin-top:20px;">
       QUERO MEU SORVETE AGORA!
     </a>
