--- a/gptquiz.html
+++ b/gptquiz.html
@@ -220,7 +220,7 @@
 <!-- INTRO -->
 <div id="intro" class="quiz-container active">
   <div style="text-align: center; margin: 20px auto;">
-    <img src="images/banner1.png" alt="Transforme suas ideias em realidade" style="width: 100%; border-radius: 16px; margin-bottom: 25px;" />
+    <img src="images/gpt.png" alt="Transforme suas ideias em realidade" style="width: 100%; border-radius: 16px; margin-bottom: 25px;" />
   </div>
 
   <h2>Você já imaginou ter o <span style="color: var(--azul-tech);">poder de criar</span> qualquer aplicativo, site ou sistema que sua mente conceber?</h2>
