--- a/lastqgpt.html
+++ b/lastqgpt.html
@@ -562,7 +562,7 @@
       
       // Simular redirecionamento (substitua pela sua URL)
       setTimeout(() => {
-        window.location.href = '[SEU_LINK_DE_CHECKOUT]';
+        window.location.href = 'https://pay.kirvano.com/50095270-0e58-46cd-b714-ba707daac1d0';
       }, 2000);
     });
 
