att pag gptquiz

--- a/lastqgpt.html
+++ b/lastqgpt.html
@@ -376,7 +376,7 @@
 
     <!-- Progresso de Download -->
     <div class="download-progress">
-      <h3 style="text-align: center; margin-bottom: 20px; color: var(--ciano);">📦 INICIALIZANDO DOWNLOAD</h3>
+      <h3 style="text-align: center; margin-bottom: 20px; color: var(--ciano);">📦 ABRINDO LINK PARA DOWNLOAD</h3>
       <div class="progress-container">
         <div class="progress-label">
           <span>Preparando conteúdo...</span>
