--- a/index.html
+++ b/index.html
@@ -343,21 +343,18 @@
 
   <!-- INTRO -->
   <div id="intro" class="quiz-container active">
-    <div style="text-align: center; margin: 20px auto;">
-      <img src="images/gpt.png" alt="Transforme suas ideias em realidade" style="width: 100%; border-radius: 16px; margin-bottom: 25px;" />
-    </div>
-
-    <h2>Você já imaginou ter o <span style="color: var(--azul-tech);">poder de criar</span> qualquer aplicativo, site ou sistema que sua mente conceber?</h2>
-    
-    <p style="text-align: center; font-size: 1.1rem; margin-bottom: 30px; color: #64748b;">
-      Descubra como o ChatGPT pode ser sua <strong>arma secreta</strong> para entrar no mundo da programação e transformar suas ideias em soluções reais
+    <div style="text-align: center; margin: 10px auto;">
+      <img src="images/gpt.png" alt="Transforme suas ideias em realidade" style="width: 60%; border-radius: 16px; margin-bottom: 25px;" />
+    </div>    
+    <p style="text-align: center; font-size: 0.9rem; margin-bottom: 30px; color: #282829;">
+      Descubra como o ChatGPT pode ser sua <strong>chance</strong> para entrar no mundo dos aplicativos e transformar suas ideias em soluções reais
     </p>
 
     <a class="option" onclick="nextQuestion('q1')" style="background: var(--azul-tech); color: white; font-size: 1.1rem;">
       🚀 QUERO DESBLOQUEAR MEU POTENCIAL!
     </a>
 
-    <p style="text-align: center; font-size: 0.9rem; margin-top: 20px; color: #94a3b8;">
+    <p style="text-align: center; font-size: 0.9rem; color: #94a3b8;">
       Responda 5 perguntas rápidas e descubra seu caminho na programação
     </p>
   </div>
