--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
   <!-- INTRO -->
   <div id="intro" class="quiz-container active">
     <div style="text-align: center; margin: 10px auto;">
-      <img src="images/gpt.png" alt="Transforme suas ideias em realidade" style="width: 60%; border-radius: 16px; margin-bottom: 25px;" />
+      <img src="images/gpt.png" alt="Transforme suas ideias em realidade" style="width: 80%; border-radius: 16px" />
     </div>    
     <p style="text-align: center; font-size: 0.9rem; margin-bottom: 30px; color: #282829;">
       Descubra como o ChatGPT pode ser sua <strong>chance</strong> para entrar no mundo dos aplicativos e transformar suas ideias em soluções reais
