--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </a>
 
     <p style="text-align: center; font-size: 0.9rem; color: #94a3b8;">
-      Responda 5 perguntas rápidas e descubra seu caminho na programação
+      Responda 5 perguntas rápidas e descubra seu caminho para construir soluções reais!
     </p>
   </div>
 
